[gd_scene load_steps=8 format=3 uid="uid://cf3nug1sfh1ix"]

[ext_resource type="Script" path="res://Main.gd" id="1_63yj5"]
[ext_resource type="PackedScene" uid="uid://l0bjoy6vwtbx" path="res://gui/Menu.tscn" id="2_ljcdm"]
[ext_resource type="PackedScene" uid="uid://byfh0p3nqrosa" path="res://gui/views/PatternEditor.tscn" id="2_nrw1o"]
[ext_resource type="PackedScene" uid="uid://lnyrbw2vvjwl" path="res://gui/views/LockedIndicator.tscn" id="3_f0rno"]
[ext_resource type="Script" path="res://globals/PopupManager.gd" id="4_kqdnh"]
[ext_resource type="PackedScene" uid="uid://dxtku0ujhowt5" path="res://gui/widgets/ToastMessage.tscn" id="5_carau"]
[ext_resource type="Script" path="res://gui/widgets/HighlightManager.gd" id="6_gf5v8"]

[node name="ScrollContainer" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_63yj5")

[node name="Main" type="VBoxContainer" parent="Main"]
layout_mode = 2

[node name="Filler" type="Control" parent="Main/Main"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 340)
layout_mode = 2

[node name="PatternEditor" parent="Main/Main" instance=ExtResource("2_nrw1o")]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2

[node name="LockedIndicator" parent="Main/Main" instance=ExtResource("3_f0rno")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Menu" parent="Main" instance=ExtResource("2_ljcdm")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 340)
layout_mode = 2
size_flags_vertical = 0

[node name="ToastMessage" parent="Main" instance=ExtResource("5_carau")]
layout_mode = 2
size_flags_vertical = 8

[node name="HighlightManager" type="CanvasLayer" parent="Main"]
unique_name_in_owner = true
offset = Vector2(300, 0)
transform = Transform2D(1, 0, 0, 1, 300, 0)
script = ExtResource("6_gf5v8")

[node name="HighlightIndicator" type="Control" parent="Main/HighlightManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PopupManager" type="CanvasLayer" parent="Main"]
script = ExtResource("4_kqdnh")

[node name="ClickCatcher" type="Control" parent="Main/PopupManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveTimer" type="Timer" parent="Main"]
unique_name_in_owner = true
one_shot = true
